[fix] features width on small screens

--- a/web/src/baseUI/feature/feature.css
+++ b/web/src/baseUI/feature/feature.css
@@ -4,13 +4,13 @@
   margin: 4rem 1rem;
   background: var(--color-orange);
   
-  width: 308px;
+  width: 249px;
   height: 300px;
   border-radius: 15px;
 }
 
 .main__features_feature-container_content{
-  width: 280px;
+  width: 222px;
   height: 360px;
   position: absolute;
   top: -2rem;
@@ -37,13 +37,13 @@
 }
 
 .main__features_feature-container_content-image img{
-  width: 280px;
+  width: 222px;
   height: 200px;
   border-radius: 15px 15px 0 0;
 }
 
 .main__features_feature-container_content-text{
-  padding: 2rem 1rem;
+  padding: .5rem 1rem;
 }
 
 .main__features_feature-container_content-text h3{
@@ -57,5 +57,5 @@
   margin-top: 1rem;
   font-family: var(--font-family);
   font-size: 12px;
-  color: rgba(255,255,255,.8);
+  color: var(--color-text);
 }
