--- a/web/src/components/features/features.css
+++ b/web/src/components/features/features.css
@@ -52,3 +52,9 @@
     text-align: center
   }
 }
+
+@media screen and (max-width: 480px){
+  .main__features-container{
+    padding: 1rem 1rem;
+  }
+}
